--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
-    "eslint": "^8.0.1"
+    "eslint": "^8.0.1",
+    "uuidv4": "^6.2.12"
   }
 }
