--- a/package.json
+++ b/package.json
@@ -2,16 +2,6 @@
   "name": "card-maker",
   "version": "0.1.0",
   "private": true,
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/RomanKazantsev13/cardMaker.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/RomanKazantsev13/cardMaker/issues"
-  },
-  "homepage": "https://github.com/RomanKazantsev13/cardMaker#readme",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -22,18 +12,10 @@
     "@types/react-dom": "^17.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^2.1.8",
     "typescript": "^4.1.2",
     "uuidv4": "^6.2.12",
     "web-vitals": "^1.0.1"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.2.0",
-    "@typescript-eslint/parser": "^5.2.0",
-    "eslint": "^8.1.0",
-    "eslint-plugin-react": "^7.26.1",
-    "jsdoc": "^3.6.7",
-    "typescript": "^4.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
