--- a/package.json
+++ b/package.json
@@ -4,19 +4,15 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "colorjoe": "^4.1.1",
     "react": "^17.0.2",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.0",
     "react-scripts": "^2.1.8",
-    "styled-components": "^5.3.3",
     "typescript": "^4.1.2",
     "uuidv4": "^6.2.12",
     "web-vitals": "^1.0.1"
@@ -24,7 +20,6 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -46,7 +41,6 @@
     ]
   },
   "devDependencies": {
-    "@types/react-color": "^3.0.6",
-    "@types/styled-components": "^5.1.15"
+    "@types/react-color": "^3.0.6"
   }
 }
