--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "react": "^17.0.2",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.0",
     "react-scripts": "^2.1.8",
+    "redux": "^4.1.2",
     "typescript": "^4.1.2",
     "uuidv4": "^6.2.12",
     "web-vitals": "^1.0.1"
@@ -41,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.16.7",
     "@types/react-color": "^3.0.6"
   }
 }
