--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "card-maker",
   "version": "0.1.0",
+  "homepage": "http://RomanKazantsev13.github.io/card-maker",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
@@ -22,7 +23,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -44,6 +47,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.16.7",
-    "@types/react-color": "^3.0.6"
+    "@types/react-color": "^3.0.6",
+    "gh-pages": "^3.2.3"
   }
 }
